test/errors/annotation_starred_value.py.expected
test/errors/annotation_starred_value.py:3 error: starred expression not allowed here
